// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Should render a primary button 1`] = `
.c0 {
  width: 350px;
  height: 45px;
  border-radius: 15px;
  font-size: 30px;
  margin-bottom: 15px;
  cursor: pointer;
  min-width: 150px;
  background: #07D44F;
  box-shadow: 0px 4px 4px rgba(0,0,0,0.1);
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
  border-color: #1e7e34;
}

.c0:hover {
  background-color: #06c94a;
  border-color: #1e7e34;
}

<button
  className="c0"
>
  Click me!
</button>
`;

exports[`Button Should render a secondary button 1`] = `
.c0 {
  width: 350px;
  height: 45px;
  border-radius: 15px;
  font-size: 30px;
  margin-bottom: 15px;
  cursor: pointer;
  min-width: 150px;
  background: #07EE59;
  box-shadow: 0px 4px 4px rgba(0,0,0,0.1);
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
  border-color: #1e7e34;
}

.c0:hover {
  background-color: #02e654;
  border-color: #1e7e34;
}

<button
  className="c0"
>
  Click me!
</button>
`;

exports[`Button Should render a tertiary button 1`] = `
.c0 {
  width: 350px;
  height: 45px;
  border-radius: 15px;
  font-size: 30px;
  margin-bottom: 15px;
  cursor: pointer;
  min-width: 150px;
  color: #373d3f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<button
  className="c0"
>
  Click me!
</button>
`;

exports[`Button Should render a tertiary button by default 1`] = `
.c0 {
  width: 350px;
  height: 45px;
  border-radius: 15px;
  font-size: 30px;
  margin-bottom: 15px;
  cursor: pointer;
  min-width: 150px;
  color: #373d3f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<button
  className="c0"
>
  Click me!
</button>
`;

exports[`ExternalLinkButton Should render a primary button 1`] = `
.c0 {
  width: 350px;
  height: 45px;
  border-radius: 15px;
  font-size: 30px;
  margin-bottom: 15px;
  cursor: pointer;
  min-width: 150px;
  background: #07D44F;
  box-shadow: 0px 4px 4px rgba(0,0,0,0.1);
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
  border-color: #1e7e34;
}

.c0:hover {
  background-color: #06c94a;
  border-color: #1e7e34;
}

<a
  className="c0"
  href="/test"
>
  Click me!
</a>
`;

exports[`ExternalLinkButton Should render a secondary button 1`] = `
.c0 {
  width: 350px;
  height: 45px;
  border-radius: 15px;
  font-size: 30px;
  margin-bottom: 15px;
  cursor: pointer;
  min-width: 150px;
  background: #07EE59;
  box-shadow: 0px 4px 4px rgba(0,0,0,0.1);
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
  border-color: #1e7e34;
}

.c0:hover {
  background-color: #02e654;
  border-color: #1e7e34;
}

<a
  className="c0"
  href="/test"
>
  Click me!
</a>
`;

exports[`ExternalLinkButton Should render a tertiary button 1`] = `
.c0 {
  width: 350px;
  height: 45px;
  border-radius: 15px;
  font-size: 30px;
  margin-bottom: 15px;
  cursor: pointer;
  min-width: 150px;
  color: #373d3f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  className="c0"
  href="/test"
>
  Click me!
</a>
`;

exports[`ExternalLinkButton Should render a tertiary button by default 1`] = `
.c0 {
  width: 350px;
  height: 45px;
  border-radius: 15px;
  font-size: 30px;
  margin-bottom: 15px;
  cursor: pointer;
  min-width: 150px;
}

<a
  className="c0"
  href="/test"
>
  Click me!
</a>
`;

exports[`LinkButton Should render a primary button 1`] = `
.c0 {
  width: 350px;
  height: 45px;
  border-radius: 15px;
  font-size: 30px;
  margin-bottom: 15px;
  cursor: pointer;
  min-width: 150px;
  background: #07D44F;
  box-shadow: 0px 4px 4px rgba(0,0,0,0.1);
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
  border-color: #1e7e34;
}

.c0:hover {
  background-color: #06c94a;
  border-color: #1e7e34;
}

<a
  className="c0"
  href="/"
  onClick={[Function]}
  theme={
    Object {
      "colors": Object {
        "accent": "#6494aa",
        "confirm": "#90a959",
        "danger": "#a63d40",
        "dark": "#151515",
        "primary": "#07D44F",
        "secondary": "#07EE59",
        "typography": "#373d3f",
        "typographyLight": "#bcbcbc",
      },
    }
  }
  variant="primary"
>
  Click me!
</a>
`;

exports[`LinkButton Should render a secondary button 1`] = `
.c0 {
  width: 350px;
  height: 45px;
  border-radius: 15px;
  font-size: 30px;
  margin-bottom: 15px;
  cursor: pointer;
  min-width: 150px;
  background: #07EE59;
  box-shadow: 0px 4px 4px rgba(0,0,0,0.1);
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
  border-color: #1e7e34;
}

.c0:hover {
  background-color: #02e654;
  border-color: #1e7e34;
}

<a
  className="c0"
  href="/"
  onClick={[Function]}
  theme={
    Object {
      "colors": Object {
        "accent": "#6494aa",
        "confirm": "#90a959",
        "danger": "#a63d40",
        "dark": "#151515",
        "primary": "#07D44F",
        "secondary": "#07EE59",
        "typography": "#373d3f",
        "typographyLight": "#bcbcbc",
      },
    }
  }
  variant="secondary"
>
  Click me!
</a>
`;

exports[`LinkButton Should render a tertiary button 1`] = `
.c0 {
  width: 350px;
  height: 45px;
  border-radius: 15px;
  font-size: 30px;
  margin-bottom: 15px;
  cursor: pointer;
  min-width: 150px;
  color: #373d3f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  className="c0"
  href="/"
  onClick={[Function]}
  theme={
    Object {
      "colors": Object {
        "accent": "#6494aa",
        "confirm": "#90a959",
        "danger": "#a63d40",
        "dark": "#151515",
        "primary": "#07D44F",
        "secondary": "#07EE59",
        "typography": "#373d3f",
        "typographyLight": "#bcbcbc",
      },
    }
  }
  variant="tertiary"
>
  Click me!
</a>
`;

exports[`LinkButton Should render a tertiary button by default 1`] = `
.c0 {
  width: 350px;
  height: 45px;
  border-radius: 15px;
  font-size: 30px;
  margin-bottom: 15px;
  cursor: pointer;
  min-width: 150px;
}

<a
  className="c0"
  href="/"
  onClick={[Function]}
  theme={
    Object {
      "colors": Object {
        "accent": "#6494aa",
        "confirm": "#90a959",
        "danger": "#a63d40",
        "dark": "#151515",
        "primary": "#07D44F",
        "secondary": "#07EE59",
        "typography": "#373d3f",
        "typographyLight": "#bcbcbc",
      },
    }
  }
>
  Click me!
</a>
`;
